--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,19 +5,26 @@
 
 // HEADER
 .header {
-  position: absolute;
-  top: 0;
-  z-index: 2;
+  // position: absolute;
+  // top: 0;
+  // z-index: 2;
 
   background: $white;
 
-  padding: rem(5) rem(20);
+  padding: rem(10) rem(20);
   width: 100%;
   min-height: rem(70);
 
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  // justify-content: space-between;
+  // align-items: center;
+  flex-direction: column;
+
+  .header__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
   button {
     border: none;
@@ -104,24 +111,24 @@
 }
 
 .navigation {
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
+  // position: absolute;
+  // z-index: 1;
+  // top: 0;
+  // left: 0;
 
   width: 100%;
-  margin-top: rem(75);
 
-  border-top: 1px solid $lighter-grey;
   background-color: $white;
 
   transition: 0.5s;
+  @include flexCenter(row);
+  padding-top: rem(5);
 
   ul {
 
     width: 90%;
     margin: 0 auto;
-    padding: rem(5);
+    // padding: rem(5);
 
     @include flexCenter(row);
     justify-content: space-around;
