--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -11,7 +11,7 @@
 
   background: $white;
 
-  padding: rem(10) rem(20);
+  padding: rem(20) rem(20) rem(10);
   width: 100%;
   min-height: rem(70);
 
