--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,40 +3,34 @@
 
 
 
-// HEADER
+// HEADER element
 .header {
-  // position: absolute;
-  // top: 0;
-  // z-index: 2;
-
   background: $white;
 
   padding: rem(20) rem(20) rem(10);
   width: 100%;
-  min-height: rem(70);
+  // min-height: rem(70);
 
   display: flex;
-  // justify-content: space-between;
-  // align-items: center;
   flex-direction: column;
+  justify-content: space-between;
 
-  .header__container {
+  // Contains hamburget icon, searchbar, profile image
+  #{&}__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-
-  button {
-    border: none;
-    background: transparent;
+    
+    .header__nav--btn {
+      border: none;
+      background: transparent;
+    }
   }
 
   // Hamburger icon
   #{&}__nav--btn {
     font-size: rem(23);
     color: $accent-color;
-
-    border: none;
 
     @include flexCenter(row);
 
@@ -57,7 +51,7 @@
     
     input {
       height: rem(40);
-      width: rem(250);
+      width: 100%;
       padding: rem(7);
       padding-left: rem(40);
 
@@ -82,14 +76,13 @@
     }
   }
   
-  // Profile button
+  // Profile icon/button
   #{&}__profile--btn {
-    // font-size: rem(20);
+    font-size: rem(20);
     color: $accent-color;
 
     @include flexCenter(row);
 
-    // padding: rem(10);
     border-radius: 50%;
     border: 2px solid $accent-color;
     width: rem(40);
@@ -106,35 +99,23 @@
     }
   }
 
-  
-
 }
 
+// Quick navigation
 .navigation {
-  // position: absolute;
-  // z-index: 1;
-  // top: 0;
-  // left: 0;
 
   width: 100%;
 
-  background-color: $white;
-
-  transition: 0.5s;
-  @include flexCenter(row);
   padding-top: rem(10);
 
   ul {
-
     width: 90%;
     margin: 0 auto;
-    // padding: rem(5);
 
     @include flexCenter(row);
     justify-content: space-around;
 
     li {
-      
       a {
         color: $accent-color;
 
@@ -147,7 +128,16 @@
     .current > * {
       color: $accent-secondary;
     }
-
     
+  }
+}
+
+// Dark mode
+.dark {
+  background: $black;
+  color: $white;
+
+  i {
+    color: $white;
   }
 }
