--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -39,3 +39,14 @@
 
 }
 
+// Dark mode
+.dark,
+.dark > * {
+  background: $black;
+  color: $white;
+
+  i {
+    color: $accent-tertiary;
+  }
+}
+
