--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -15,6 +15,8 @@
   flex-direction: column;
   justify-content: space-between;
 
+  border-bottom: rem(1) solid $light-grey;
+
   // Contains hamburget icon, searchbar, profile image
   #{&}__container {
     display: flex;
