--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -9,13 +9,13 @@
 
   padding: rem(20) rem(20) rem(10);
   width: 100%;
-  // min-height: rem(70);
+  min-height: rem(70);
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 
-  border-bottom: rem(1) solid $light-grey;
+  border-bottom: rem(1) solid $lighter-grey;
 
   // Contains hamburget icon, searchbar, profile image
   #{&}__container {
@@ -50,10 +50,16 @@
   // Search input
   #{&}__search {
     position: relative;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 0 rem(10);
     
     input {
       height: rem(40);
-      width: 90%;
+      width: 100%;
       padding: rem(7);
       padding-left: rem(40);
 
@@ -70,7 +76,7 @@
     i {
       position: absolute;
       top: rem(10);
-      left: rem(10);
+      left: rem(15);
 
       font-size: rem(20);
       -webkit-text-stroke: 2px $white;
