--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -107,6 +107,62 @@
     }
   }
 
+  position: relative;
+
+  #{&}__main--nav {
+    position: absolute;
+
+    top: 0;
+    left: 0;
+
+    height: 75vh;
+    background: $white;
+    width: 80%;
+
+    background: $accent-color;
+    color: $white;
+
+    border-top-right-radius: rem(15);
+    border-bottom-right-radius: rem(15);
+
+    nav {
+      width: 70%;
+      height: 100%;
+
+      ul {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+
+        li {
+          padding-left: rem(20);
+          font-weight: 500;
+          color: $white;
+
+          &:hover {
+            color: $accent-secondary;
+          }
+        }
+      }
+    }
+
+    &-close {
+      position: fixed;
+
+      top: 1.5%;
+      right: 25%;
+      z-index: 30;
+
+      button {
+        background: transparent;
+        border: none;
+        font-size: rem(20);
+        color: $white;
+      }
+    }
+  }
+
 }
 
 // Quick navigation
